--- a/CSS6.css
+++ b/CSS6.css
@@ -2,7 +2,7 @@ header
 {
 background-color: rgb(29, 29, 77);
 height: 90px;
-width: 1300px;
+width: 100%;
 margin-bottom: 0px;
 }
 .ul1{
@@ -45,14 +45,12 @@ body
 margin: 0px;
 padding: 0px;
 background-image: url(../CSS6/bg1\ \(6\).svg);
-width: 1300px;
-height: 900px;
 }
 
 .img1
 {
 float:left;
-margin: 20px;
+margin: 22px;
 border: 8px solid white ;
 border-radius: 100%;
 }
@@ -60,10 +58,10 @@ border-radius: 100%;
 
 .content
 {
-height: 120px;
-width: 1200px;
+height: 130px;
+width: 100%;
 background-color: rgba(225, 239, 255, 0.925);
-padding: 50px;
+padding: 30px;
 text-align: left;
 font-size: 20px;
 color:  rgb(35, 35, 82);
@@ -91,7 +89,7 @@ footer
 {
 margin-top: 600px;
 height: 80px;
-width: 1300px;
+width: 100%;
 }
 
 .d2
@@ -102,8 +100,12 @@ height: 300px;
 margin: 0px 40px 20px 30px;
 float: left;
 padding: 5px;
+transition:background-color 3s ;
 }
-
+.d2:hover
+{
+background-color: rgb(106, 211, 202);
+}
 .p1
 {
 font-size: 20px;
@@ -158,13 +160,13 @@ color: white;
 #About
 {
 background-color: white;
-height: 820px;
-width: 1300px;
+height: 1000px;
+width: 100%;
 margin-top: 330px;
 } 
 .p2
 {
-font-size: 25px;
+font-size: 20px;
 text-indent: 5%;
 color: rgb(54, 54, 128);
 margin-left: 10px;
@@ -184,7 +186,7 @@ height: 4px;
 position: absolute;
 background: rgb(63, 170, 170);
 left: 460px;
-top: 1610px;
+top: 1580px;
 }
 h1:after
 {
@@ -194,7 +196,7 @@ height: 4px;
 position: absolute;
 background: rgb(63, 170, 170);
 right: 460px;
-top: 1610px;
+top: 1580px;
 }
 .p3
 {
@@ -217,8 +219,17 @@ height: 120px;
 width: 1200px;
 padding: 50px;
 text-align: left;
-font-size: 20px;
+font-size: 15px;
 }
+.hr1
+{
+background: linear-gradient(to right,rgb(63, 170, 170),rgb(63, 170, 170));
+height: 5px;
+margin-top: 2px;
+margin-left: 42%;
+width: 15%;
+}
+
 #d6{
 margin-left: 180px;
 width: 1020px;
@@ -227,24 +238,146 @@ background-color: rgb(219, 217, 245);
 }
 .d7
 {
-padding: 15px 15px 15px 85px;
+padding: 25px 130px 25px 100px;
 float: left;
 }
 label
 {
 color: rgb(63, 170, 170);
-font-size: 30px;
+font-size: 15px;
 }
 input
 {
-height: 55px;
-width: 270px;
+height: 30px;
+width: 200px;
 color: rgb(63, 170, 170);
-
 }
 .b2
 {
-margin-left: 190px;
+margin-left: 160px;
 height: 30px;
-width:100px
+width: 100px;
 }
+#d8
+{
+height: 230px;
+width: 1020px;
+margin: 20px 0px 0px 180px;
+/* background-color: rgb(146, 194, 194);     */
+}
+.r1
+{  
+margin-top: 55px 0px 0px 250px;
+height: 15px;
+width: 15px;
+background-image: linear-gradient(rgb(13, 134, 138) ,rgb(0, 47, 255));
+border-radius: 100%;
+display: inline-block;
+}
+.r2
+{  
+margin-top: 55px 0px 0px 250px;
+height: 10px;
+width: 10px;
+background-image: linear-gradient(rgb(253, 84, 84) ,rgba(238, 156, 48, 0.959));
+border-radius: 100%;
+display: inline-block;
+}
+.r3
+{  
+margin-top: 55px 0px 0px 250px;
+height: 10px;
+width: 10px;
+background-image: linear-gradient(rgb(250, 253, 84) ,rgba(133, 238, 48, 0.959)); 
+border-radius: 100%;
+display: inline-block;
+}
+.r4
+{  
+margin-top: 55px 0px 0px 250px;
+height: 10px;
+width: 10px;
+background-image: linear-gradient(rgb(253, 84, 84) ,rgba(238, 48, 48, 0.959));
+border-radius: 100%;
+display: inline-block;
+}
+.r5
+{  
+margin-top: 55px 0px 0px 250px;
+height: 10px;
+width: 10px;
+background-image: linear-gradient(rgb(84, 219, 253) ,rgba(48, 137, 238, 0.959));
+border-radius: 100%;
+display: inline-block;
+}
+.r6
+{  
+margin-top: 55px 0px 0px 250px;
+height: 10px;
+width: 10px;
+background-image: linear-gradient(rgb(239, 84, 253) ,rgba(247, 190, 255, 0.959));
+border-radius: 100%;
+display: inline-block;
+}
+.r7
+{  
+margin-top: 55px 0px 0px 250px;
+height: 10px;
+width: 10px;
+background-image: linear-gradient(rgb(255, 167, 167) ,rgba(255, 92, 92, 0.959));
+border-radius: 100%;
+display: inline-block;
+}
+
+
+.d9
+{
+width: 280px;
+height: 80px;
+margin: 10px 0px 0px 40px;
+/* background-color: darkgray; */
+float: left;
+}
+
+.d10
+{
+margin-left: 450px;
+color: teal;
+}
+.s2
+{
+color: teal;
+font-size: 35px;
+}
+.s3
+{
+color: rgba(238, 156, 48, 0.959);
+font-size: 20px;
+}
+.s4
+{
+color: rgb(24, 175, 19);
+font-size: 20px;
+}
+.s5
+{
+color: rgb(218, 6, 6);
+font-size: 20px;
+}
+.s6
+{
+color: rgb(124, 122, 236);
+font-size: 20px;
+}
+.s7
+{
+color: rgb(175, 113, 175);
+font-size: 20px;
+}
+.s8
+{
+color: rgb(255, 153, 153);
+font-size: 20px;
+}
+
+   
